--- a/src/component/Main/Main.scss
+++ b/src/component/Main/Main.scss
@@ -15,3 +15,120 @@ span {
   color: #333333;
 }
 
+.form-search {
+  margin: 2rem auto;
+  text-align: center;
+
+  font: bold 13px sans-serif;
+  position: relative;
+}
+
+.search--label {
+  display: block;
+  text-align: center;
+  margin: 1rem 0;
+  font-size: 1.25rem;
+}
+
+.form-search input {
+  width: 60%;
+  box-sizing: border-box;
+  border-bottom-left-radius: 0.2rem;
+  border-top-left-radius: 0.2rem;
+  background-color: #ffffff;
+  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.08);
+  padding: 1rem;
+  border: 1px solid #5514b4;
+  color: #4e565c;
+  -webkit-appearance: none;
+}
+
+.form-search button {
+  border-bottom-right-radius: 2px;
+  border-top-right-radius: 2px;
+  background-color: #5514b4;
+  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.08);
+  color: #ffffff;
+  padding: 1rem;
+  margin-left: 0.2rem;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 800;
+}
+
+.bt--container-main {
+  width: 80%;
+  margin: auto;
+}
+
+h1 {
+  text-align: center;
+}
+.row {
+  display: flex;
+}
+
+.column {
+  flex-basis: 100%;
+}
+
+.card {
+  background-color: #fff;
+  padding: 1rem 1.5rem;
+  margin: 0.875rem;
+  margin-bottom: 2rem;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-bottom-color: rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  word-break: break-word;
+}
+
+.card--fullwidth {
+  width: 100%;
+}
+
+.bt--wrapper-content {
+  margin-bottom: 0.5rem;
+}
+.bt--wrapper-content span {
+  font-weight: bolder;
+}
+
+.bt--wrapper-artice {
+  margin-bottom: 5rem;
+}
+.bt-wrapper--article {
+  display: flex;
+}
+
+.thumbnail {
+  padding: 2rem;
+  height: 10rem;
+}
+
+.st0 {
+  fill: #ffffff;
+}
+
+.bt--header-logo {
+  width: 5rem;
+  height: 5rem;
+  padding: 1%;
+}
+.bt--wrapper-header {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  background-color: #5514b4;
+  color: #ffffff;
+}
+.bt--wrapper-footer {
+  background-color: #5514b4;
+  width: 100%;
+  height: 5rem;
+  color: white;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+}
